--- a/package.json
+++ b/package.json
@@ -4,24 +4,35 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:backend": "cd api && python3 -m uvicorn server:app --reload --host 0.0.0.0 --port 8000",
+    "dev:all": "./run-dev.sh",
     "build": "next build",
+    "build:docker": "docker build --build-arg NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY -t consultation-app .",
     "start": "next start",
+    "start:docker": "docker run -p 8000:8000 --env-file .env.local consultation-app",
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.35.1",
+    "@microsoft/fetch-event-source": "^2.0.1",
+    "next": "15.5.6",
     "react": "19.1.0",
+    "react-datepicker": "^8.9.0",
     "react-dom": "19.1.0",
-    "next": "15.5.6"
+    "react-markdown": "^10.1.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
