made changes to the Dockerfile with changes in hierarchy structure

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,8 +20,9 @@ services:
       - HUGGINGFACE_API_KEY=${HUGGINGFACE_API_KEY}
     volumes:
       # Mount the FastAPI backend code for hot reload
-      - ./api/server.py:/app/server.py
-    command: uvicorn server:app --host 0.0.0.0 --port 8000 --reload
+      - ./api:/app/saas/api
+      - ./prompts:/app/saas/prompts
+    command: uvicorn saas.api.server:app --host 0.0.0.0 --port 8000 --reload
     healthcheck:
       test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
       interval: 30s
