--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,10 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - XAI_API_KEY=${XAI_API_KEY}
       - HUGGINGFACE_API_KEY=${HUGGINGFACE_API_KEY}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - DEFAULT_AWS_REGION=${DEFAULT_AWS_REGION}
     volumes:
       # Mount the FastAPI backend code for hot reload
       - ./api:/app/saas/api
