--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
   "dependencies": {
     "@clerk/nextjs": "^6.35.1",
     "@microsoft/fetch-event-source": "^2.0.1",
+    "docx": "^9.5.1",
+    "html-docx-js-typescript": "^0.1.5",
+    "html-to-docx": "^1.8.0",
+    "marked": "^17.0.1",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-datepicker": "^8.9.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
+    "remark": "^15.0.1",
     "remark-breaks": "^4.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
