--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@clerk/nextjs": "^6.35.1",
     "@microsoft/fetch-event-source": "^2.0.1",
     "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "html-docx-js-typescript": "^0.1.5",
-    "html-to-docx": "^1.8.0",
     "marked": "^17.0.1",
     "next": "15.5.6",
     "react": "19.1.0",
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-datepicker": "^6.2.0",
